[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tot"
dynamic = ["version"]
description = "A simple http proxy"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["HTTP", "proxy"]
authors = [
    {name = "Hang", email = "bebound@gmail.com" }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "aiohttp>=3.9.5"
]
#
[project.optional-dependencies]
test = ["requests", "pytest"]

[project.urls]
"Homepage" = "https://github.com/bebound/tot"
"Source" = "https://github.com/bebound/tot/"

[project.scripts]
tot = "tot.proxy:main"


[tool.setuptools.dynamic]
version = { attr = "tot.__version__" }